# SentinelaSUS

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  render.yaml  requirements.txt  run.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
backend/: config.py  dependencies.py  main.py
backend/pipeline/: baselines.py  brief_generator.py  detector.py  evaluation.py  loader.py  normalizer.py  reliability.py  validator.py
backend/routers/: alerts.py  brief.py  conditions.py  demo.py  evaluation.py  methodology.py  municipalities.py  overview.py  quality.py  timeseries.py
backend/schemas/: alert.py  brief.py  condition.py  municipality.py  observation.py  overview.py  quality.py
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  DEMO_WALKTHROUGH.md  DEPLOYMENT.md  HANDOFF.md  PORTFOLIO_HANDOFF.md  RESPONSIBLE_USE_MEMO.md  SCREENSHOT_GUIDE.md  TECHNICAL_DECISIONS.md  TESTING.md  assumptions.md  data-dictionary.md  methodology.md  portfolio-case-study.md  responsible-analytics.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/brief/: page.tsx
frontend/src/app/comparison/: page.tsx
frontend/src/components/: SyntheticBanner.tsx
frontend/src/lib/: api.ts  types.ts
scripts/: generate_synthetic_epidata.py  run_pipeline.py  vercel_prepare.sh
tests/backend/: test_baselines.py  test_brief_language.py  test_detector.py  test_endpoints.py  test_evaluation.py  test_generator.py  test_reliability.py  test_schemas.py
(+9 files in other folders)
