[project]
name = "sentinelasus"
version = "0.1.0"
description = "SentinelaSUS - Painel responsável de vigilância epidemiológica sintética"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-multipart>=0.0.12",
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.12",
    "httpx>=0.27",
]
pipeline = [
    "scipy>=1.14",
    "statsmodels>=0.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:starlette.testclient",
]
